support disable artifact download

--- a/testdata/bitbucket-pipelines.yml
+++ b/testdata/bitbucket-pipelines.yml
@@ -13,6 +13,8 @@ pipelines:
         script:
           - cat builder.txt
           - cat docker.txt
+        artifacts:
+          download: false
 
   custom:
     test:
