--- a/testdata/bitbucket-pipelines.yml
+++ b/testdata/bitbucket-pipelines.yml
@@ -1,25 +1,17 @@
 pipelines:
   default:
     - step:
-        name: build
+        name: notify
         script:
-          - echo $AA
-          - echo $BB
-          - docker version
-        services:
-          - docker
-#    - step:
-#        name: notify
-#        script:
-#          - echo "hello world"
-#          - echo "goodbye world"
-#          - pipe: atlassian/slack-notify:2.3.0
-#            variables:
-#              WEBHOOK_URL: https://hooks.slack.com/services/XXXXXXXXX/XXXXXXXXX/XXXXXXXXXXXXXXXXXXXXXXXX
-#              MESSAGE: "Hello, Default"
-#              CHANNEL: "#general"
-#              USERNAME: "Bitbucket"
-#              ICON_URL: "https://www.atlassian.com/dam/wac/legacy/bitbucket-174x174.png"
+          - echo "hello world"
+          - echo "goodbye world"
+          - pipe: atlassian/slack-notify:2.3.0
+            variables:
+              WEBHOOK_URL: https://hooks.slack.com/services/XXXXXXXXX/XXXXXXXXX/XXXXXXXXXXXXXXXXXXXXXXXX
+              MESSAGE: "Hello, Default"
+              CHANNEL: "#general"
+              USERNAME: "Bitbucket"
+              ICON_URL: $AA
 
 
   custom:
