fix the get cache key from container issue

--- a/testdata/bitbucket-pipelines.yml
+++ b/testdata/bitbucket-pipelines.yml
@@ -1,10 +1,15 @@
 pipelines:
   default:
     - step:
-        name: cache
+        name: build
         script:
-          - echo "Hello, World"
-          - cat node_modules/test.txt
+          - npm i
+        caches:
+          - node
+    - step:
+        name: test
+        script:
+          - npm test
         caches:
           - node
 
